@@ -64,7 +64,7 @@ function(contriburl = contrib.url(repos, type), method,
                 ## read.dcf(), catching problems from both missing or
                 ## invalid files.
                 need_dest <- FALSE
-                op <- options(warn = -1L)                
+                op <- options(warn = -1L)
                 z <- tryCatch({
                     download.file(url = paste0(repos, "/PACKAGES.rds"),
                                   destfile = dest, method = method,
@@ -74,7 +74,7 @@ function(contriburl = contrib.url(repos, type), method,
                 if(!inherits(z, "error"))
                     z <- res0 <- tryCatch(readRDS(dest),
                                           error = identity)
-                
+
                 if(inherits(z, "error")) {
                     ## Downloading or reading .rds failed, so try the
                     ## DCF variants.
@@ -102,7 +102,7 @@ function(contriburl = contrib.url(repos, type), method,
                     if (!inherits(z, "error"))
                         z <- res0 <- tryCatch(read.dcf(file = tmpf),
                                               error = identity)
-                    
+
                     unlink(tmpf)
                     on.exit()
                 }
@@ -847,7 +847,7 @@ getCRANmirrors <- function(all = FALSE, local.only = FALSE)
                 all = all, local.only = local.only)
 }
 
-.chooseMirror <- function(m, label, graphics, ind, useHTTPS)
+.chooseMirror <- function(m, label, graphics, ind)
 {
     if(is.null(ind) && !interactive())
         stop("cannot choose a ", label, " mirror non-interactively")
@@ -867,19 +867,13 @@ getCRANmirrors <- function(all = FALSE, local.only = FALSE)
     	    	m <- mHTTP
     	    }
     	}
-    	if (useHTTPS) {
-    	    httpsLabel <- paste("Secure", label, "mirrors")
-            httpLabel <- paste("Other", label, "mirrors")
-    	    res <- menu(c(m[, 1L], "(other mirrors)"), graphics, httpsLabel)
-    	    if (res > nrow(m)) {
-    	    	m <- mHTTP
-    	    	res <- menu(m[, 1L], graphics, httpLabel)
+        httpsLabel <- paste("Secure", label, "mirrors")
+        httpLabel <- paste("Other", label, "mirrors")
+        res <- menu(c(m[, 1L], "(other mirrors)"), graphics, httpsLabel)
+        if (res > nrow(m)) {
+            m <- mHTTP
+            res <- menu(m[, 1L], graphics, httpLabel)
     	    }
-    	} else {
-            httpLabel <- paste(label, "mirrors")
-    	    m <- mHTTP
-    	    res <- menu(m[, 1L], graphics, httpLabel)
-    	}
     }
     if (res > 0L) {
         URL <- m[res, "URL"]
@@ -889,11 +883,10 @@ getCRANmirrors <- function(all = FALSE, local.only = FALSE)
 }
 
 chooseCRANmirror <- function(graphics = getOption("menu.graphics"), ind = NULL,
-                             useHTTPS = getOption("useHTTPS", TRUE),
                              local.only = FALSE)
 {
     m <- getCRANmirrors(all = FALSE, local.only = local.only)
-    url <- .chooseMirror(m, "CRAN", graphics, ind, useHTTPS)
+    url <- .chooseMirror(m, "CRAN", graphics, ind)
     if (length(url)) {
         repos <- getOption("repos")
         repos["CRAN"] <- url
@@ -903,13 +896,12 @@ chooseCRANmirror <- function(graphics = getOption("menu.graphics"), ind = NULL,
 }
 
 chooseBioCmirror <- function(graphics = getOption("menu.graphics"), ind = NULL,
-                             useHTTPS = getOption("useHTTPS", TRUE),
                              local.only = FALSE)
 {
     m <- .getMirrors("https://bioconductor.org/BioC_mirrors.csv",
                      file.path(R.home("doc"), "BioC_mirrors.csv"),
                      all = FALSE, local.only = local.only)
-    url <- .chooseMirror(m, "BioC", graphics, ind, useHTTPS)
+    url <- .chooseMirror(m, "BioC", graphics, ind)
     if (length(url))
         options(BioC_mirror = url)
     invisible()
