@@ -10,6 +10,10 @@
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{diag()} gets optional \code{names} argument.
+ 
+      \item \code{chooseCRANmirror} and \code{chooseBioCmirror} no
+      longer have a \code{useHTTPS} argument, not needed now all \R
+      builds support \samp{https://} downloads.
     }
   }
 
